--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -83,6 +83,18 @@ body {
 		color: #4d4959;
 		font-size: 13px;
 		text-transform: uppercase;
+		position: relative;
+
+		&:nth-child(1)::after,
+		&:nth-child(3)::after {
+			content: "";
+			position: absolute;
+			bottom: 0;
+			right: 0;
+			width: 2px;
+			height: 2px;
+			background-color: #4d4959;
+		}
 	}
 }
 .page {
