--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -56,12 +56,21 @@ body {
 	width: 100%;
 	z-index: 50;
 	left: 0;
-	top: 35px;
+	top: 65px;
 	// .header__menu
 	&__menu {
 	}
 	// .header__logo
 	&__logo {
+		position: relative;
+		top: -55px;
+		left: 50%;
+		width: 94px;
+		height: 85px;
+		transform: translateX(-47px);
+		img {
+			width: 100%;
+		}
 	}
 }
 .menu {
@@ -104,6 +113,12 @@ body {
 		color: #4d4959;
 		font-size: 13px;
 		text-transform: uppercase;
+		font-weight: 700;
+		letter-spacing: 2.6px;
+
+		&:hover {
+			color: #69c3a1;
+		}
 	}
 }
 .page {
@@ -112,6 +127,16 @@ body {
 	position: relative;
 	z-index: 1;
 }
+
+.top {
+	height: 100vh;
+
+	//top__image
+	&__image {
+		height: 100%;
+	}
+}
+
 .footer {
 	grid-area: footer;
 	background-color: #f7f7f7;
