--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -18,7 +18,7 @@ body {
 	font-size: 18px;
 	text-align: center;
 	background-color: #fff;
-	color: #070707;
+	color: #848789;
 	font-family: "Gilroy", Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 //========================================================================================================================================================
@@ -45,13 +45,20 @@ body {
 	display: grid;
 	grid-template: 1fr minmax(70px, auto) / 1fr;
 	grid-template-areas:
-		"header"
 		"main"
 		"footer";
 }
-.header {
-	grid-area: header;
 
+.icon {
+}
+.title {
+	font-weight: 700;
+	text-transform: uppercase;
+	letter-spacing: 0.2em;
+}
+//========================================================================================================================================================
+
+.header {
 	position: absolute;
 	width: 100%;
 	z-index: 50;
@@ -124,18 +131,42 @@ body {
 .page {
 	grid-area: main;
 
-	position: relative;
-	z-index: 1;
+	// position: relative;
+	// z-index: 1;
 }
+//========================================================================================================================================================
 
 .top {
 	height: 100vh;
 
 	//top__image
 	&__image {
-		height: 100%;
+		height: 100vh;
 	}
 }
+//========================================================================================================================================================
+.generation {
+	background-color: #f7f7f7;
+	margin: 118px 0px 140px 0px;
+	//.generation__body
+	&__body {
+		max-width: 1080px;
+		margin: auto;
+	}
+	// .generation__icon
+	&__icon {
+		margin: 0px 0px 30px 0px;
+	}
+	// .generation__title
+	&__title {
+		margin: 0px 0px 35px 0px;
+	}
+	// .generation__text
+	&__text {
+	}
+}
+
+//========================================================================================================================================================
 
 .footer {
 	grid-area: footer;
