--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@ body {
   font-size: 18px;
   text-align: center;
   background-color: #fff;
-  color: #070707;
+  color: #848789;
   font-family: "Gilroy", Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
@@ -133,13 +133,16 @@ body {
   -ms-grid-rows: 1fr minmax(70px, auto);
   -ms-grid-columns: 1fr;
       grid-template: 1fr minmax(70px, auto)/1fr;
-      grid-template-areas: "header" "main" "footer";
+      grid-template-areas: "main" "footer";
+}
+
+.title {
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
 }
 
 .header {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: header;
   position: absolute;
   width: 100%;
   z-index: 50;
@@ -206,11 +209,9 @@ body {
 }
 
 .page {
-  -ms-grid-row: 2;
+  -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: main;
-  position: relative;
-  z-index: 1;
 }
 
 .top {
@@ -218,11 +219,29 @@ body {
 }
 
 .top__image {
-  height: 100%;
+  height: 100vh;
+}
+
+.generation {
+  background-color: #f7f7f7;
+  margin: 118px 0px 140px 0px;
+}
+
+.generation__body {
+  max-width: 1080px;
+  margin: auto;
+}
+
+.generation__icon {
+  margin: 0px 0px 30px 0px;
+}
+
+.generation__title {
+  margin: 0px 0px 35px 0px;
 }
 
 .footer {
-  -ms-grid-row: 3;
+  -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: footer;
   background-color: #f7f7f7;
