--- a/#src/scss/_fonts.scss
+++ b/#src/scss/_fonts.scss
@@ -1,59 +1,61 @@
-@font-face {
-	font-family: "Gilroy";
-	src: local("Gilroy Medium"), local("Gilroy-Medium"), url("../fonts/Gilroy-Medium.woff2") format("woff2"),
-		url("../fonts/Gilroy-Medium.woff") format("woff"), url("../fonts/Gilroy-Medium.ttf") format("truetype");
-	font-weight: 500;
-	font-style: normal;
-}
-@font-face {
-	font-family: "Gilroy";
-	src: local("Gilroy Bold"), local("Gilroy-Bold"), url("../fonts/Gilroy-Bold.woff2") format("woff2"),
-		url("../fonts/Gilroy-Bold.woff") format("woff"), url("../fonts/Gilroy-Bold.ttf") format("truetype");
-	font-weight: 700;
-	font-style: normal;
-}
-@font-face {
-	font-family: "icons";
-	src: url("../fonts/icons.ttf?s0j9hf") format("truetype"), url("../fonts/icons.woff?s0j9hf") format("woff"),
-		url("../fonts/icons.svg?s0j9hf#icons") format("svg");
-	font-weight: normal;
-	font-style: normal;
-	font-display: block;
-}
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap");
 
-[class^="_icon-"]:before,
-[class*=" _icon-"]:before {
-	/* use !important to prevent issues with browser extensions that change fonts */
-	font-family: "icons" !important;
-	speak: never;
-	font-style: normal;
-	font-weight: normal;
-	font-variant: normal;
-	text-transform: none;
-	line-height: 1;
+// @font-face {
+// 	font-family: "Gilroy";
+// 	src: local("Gilroy Medium"), local("Gilroy-Medium"), url("../fonts/Gilroy-Medium.woff2") format("woff2"),
+// 		url("../fonts/Gilroy-Medium.woff") format("woff"), url("../fonts/Gilroy-Medium.ttf") format("truetype");
+// 	font-weight: 500;
+// 	font-style: normal;
+// }
+// @font-face {
+// 	font-family: "Gilroy";
+// 	src: local("Gilroy Bold"), local("Gilroy-Bold"), url("../fonts/Gilroy-Bold.woff2") format("woff2"),
+// 		url("../fonts/Gilroy-Bold.woff") format("woff"), url("../fonts/Gilroy-Bold.ttf") format("truetype");
+// 	font-weight: 700;
+// 	font-style: normal;
+// }
+// @font-face {
+// 	font-family: "icons";
+// 	src: url("../fonts/icons.ttf?s0j9hf") format("truetype"), url("../fonts/icons.woff?s0j9hf") format("woff"),
+// 		url("../fonts/icons.svg?s0j9hf#icons") format("svg");
+// 	font-weight: normal;
+// 	font-style: normal;
+// 	font-display: block;
+// }
 
-	/* Better Font Rendering =========== */
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
+// [class^="_icon-"]:before,
+// [class*=" _icon-"]:before {
+// 	/* use !important to prevent issues with browser extensions that change fonts */
+// 	font-family: "icons" !important;
+// 	speak: never;
+// 	font-style: normal;
+// 	font-weight: normal;
+// 	font-variant: normal;
+// 	text-transform: none;
+// 	line-height: 1;
 
-._icon-be:before {
-	content: "\e900";
-}
-._icon-dr:before {
-	content: "\e901";
-}
-._icon-in:before {
-	content: "\e902";
-}
-._icon-inst:before {
-	content: "\e903";
-}
-._icon-star_black:before {
-	content: "\e904";
-	color: #070707;
-}
-._icon-star_white:before {
-	content: "\e905";
-	color: #e5e5e5;
-}
+// 	/* Better Font Rendering =========== */
+// 	-webkit-font-smoothing: antialiased;
+// 	-moz-osx-font-smoothing: grayscale;
+// }
+
+// ._icon-be:before {
+// 	content: "\e900";
+// }
+// ._icon-dr:before {
+// 	content: "\e901";
+// }
+// ._icon-in:before {
+// 	content: "\e902";
+// }
+// ._icon-inst:before {
+// 	content: "\e903";
+// }
+// ._icon-star_black:before {
+// 	content: "\e904";
+// 	color: #070707;
+// }
+// ._icon-star_white:before {
+// 	content: "\e905";
+// 	color: #e5e5e5;
+// }
