--- a/css/style.css
+++ b/css/style.css
@@ -1,67 +1,5 @@
 @charset "UTF-8";
-@font-face {
-  font-family: "Gilroy";
-  src: local("Gilroy Medium"), local("Gilroy-Medium"), url("../fonts/Gilroy-Medium.woff2") format("woff2"), url("../fonts/Gilroy-Medium.woff") format("woff"), url("../fonts/Gilroy-Medium.ttf") format("truetype");
-  font-weight: 500;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "Gilroy";
-  src: local("Gilroy Bold"), local("Gilroy-Bold"), url("../fonts/Gilroy-Bold.woff2") format("woff2"), url("../fonts/Gilroy-Bold.woff") format("woff"), url("../fonts/Gilroy-Bold.ttf") format("truetype");
-  font-weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: "icons";
-  src: url("../fonts/icons.ttf?s0j9hf") format("truetype"), url("../fonts/icons.woff?s0j9hf") format("woff"), url("../fonts/icons.svg?s0j9hf#icons") format("svg");
-  font-weight: normal;
-  font-style: normal;
-  font-display: block;
-}
-
-[class^="_icon-"]:before,
-[class*=" _icon-"]:before {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: "icons" !important;
-  speak: never;
-  font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-._icon-be:before {
-  content: "\e900";
-}
-
-._icon-dr:before {
-  content: "\e901";
-}
-
-._icon-in:before {
-  content: "\e902";
-}
-
-._icon-inst:before {
-  content: "\e903";
-}
-
-._icon-star_black:before {
-  content: "\e904";
-  color: #070707;
-}
-
-._icon-star_white:before {
-  content: "\e905";
-  color: #e5e5e5;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap");
 /* Обнуление */
 *,
 *::before,
@@ -105,7 +43,7 @@ body {
   text-align: center;
   background-color: #fff;
   color: #848789;
-  font-family: "Gilroy", Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: "Lato", Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 .ibg {
@@ -128,6 +66,7 @@ body {
 .wrapper {
   position: relative;
   min-height: 100%;
+  overflow: hidden;
   display: -ms-grid;
   display: grid;
   -ms-grid-rows: 1fr minmax(70px, auto);
@@ -140,6 +79,7 @@ body {
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 0.2em;
+  color: #353738;
 }
 
 .header {
@@ -212,10 +152,12 @@ body {
   -ms-grid-row: 1;
   -ms-grid-column: 1;
   grid-area: main;
+  min-width: 0;
 }
 
 .top {
   height: 100vh;
+  max-width: 100%;
 }
 
 .top__image {
@@ -227,8 +169,21 @@ body {
   padding: 118px 0px 140px 0px;
 }
 
+@media (max-width: 1500px) {
+  .generation {
+    padding: 90px 0px 100px 0px;
+  }
+}
+
+@media (max-width: 1080px) {
+  .generation {
+    padding: 60px 0px 70px 0px;
+  }
+}
+
 .generation__body {
-  max-width: 1080px;
+  max-width: 1040px;
+  padding: 0px 20px;
   margin: auto;
 }
 
@@ -240,27 +195,193 @@ body {
   margin: 0px 0px 35px 0px;
 }
 
-.brands {
+.generation__text {
+  line-height: 34px;
+}
+
+.brands__row {
   display: -ms-grid;
   display: grid;
-  grid-auto-flow: row;
+  grid-auto-flow: column;
   -ms-grid-columns: (1fr)[3];
       grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: (1fr)[3];
+      grid-template-rows: repeat(3, 1fr);
+  position: relative;
+}
+
+@media (max-width: 1080px) {
+  .brands__row {
+    -ms-grid-columns: (1fr)[2];
+        grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.brands__item {
+  position: relative;
+}
+
+.brands__item_b {
+  -ms-grid-column: span 2;
+      grid-column-start: span 2;
+  -ms-grid-row: span 3;
+      grid-row-start: span 3;
+}
+
+@media (max-width: 1080px) {
+  .brands__item_b {
+    -ms-grid-column: span 1;
+        grid-column-start: span 1;
+  }
+}
+
+.brands__item_m {
+  -ms-grid-row: span 3;
+      grid-row-start: span 3;
+}
+
+.brands__logo {
+  opacity: 0;
+  display: -ms-grid;
+  display: grid;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(100, 194, 158, 0.5);
+  position: absolute;
+  z-index: 2;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.brands__logo:hover {
+  opacity: 1;
+}
+
+.brands__logo img {
+  margin: auto;
 }
 
 .brands__img {
-  position: relative;
-  padding: 0px 0px 100% 0px;
-}
-
-.brands__img img {
-  position: absolute;
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+}
+
+.brands__content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-row: 2 span;
+      grid-row-start: 2 span;
+  padding: 60px 65px;
+  position: relative;
+  z-index: 2;
+}
+
+.brands__content::after {
+  content: "";
+  position: absolute;
+  bottom: -10px;
+  left: 50%;
+  width: 20px;
+  height: 20px;
+  margin: 0px 0px 0px -10px;
+  background-color: #fff;
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+}
+
+@media (max-width: 1500px) {
+  .brands__content {
+    padding: 30px 40px;
+  }
+}
+
+.brands__icon {
+  margin: 0px 0px 25px 0px;
+}
+
+.brands__title {
+  margin: 0px 0px 20px 0px;
+}
+
+.brands__text {
+  text-align: justify;
+  line-height: 30px;
+  font-size: 16px;
+  position: relative;
+  padding: 0px 0px 35px 0px;
+}
+
+.brands__text::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  width: 50px;
+  height: 1px;
+  margin: 0px 0px 0px -25px;
+  background-color: #848789;
+}
+
+@media (max-width: 1500px) {
+  .brands__text {
+    padding: 0px 0px 15px 0px;
+  }
+}
+
+.twitter-slider {
+  padding: 125px 0px 70px 0px;
+  max-width: 100%;
+}
+
+.twitter-slider__wrapper {
+  max-width: 100%;
+}
+
+.twitter-slider__container {
+  max-width: 1080px;
+  margin: 0 auto;
+}
+
+.twitter-slider__logo {
+  margin: 0px 0px 30px 0px;
+}
+
+.twitter-slider__title {
+  margin: 0px 0px 20px 0px;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 0.1em;
+  color: #353738;
+}
+
+.twitter-slider__title_time {
+  font-weight: 300;
+}
+
+.twitter-slider__text {
+  margin: 0px 0px 50px 0px;
+  font-size: 24px;
+  line-height: 34px;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.twitter-slider .swiper-pagination {
+  bottom: 70px;
+}
+
+.twitter-slider .swiper-pagination-bullet {
+  width: 11px;
+  height: 11px;
+  line-height: 20px;
+  font-size: 14px;
+  background-color: transparent;
+  border: 1px solid #a9afb3;
+  opacity: 1;
+}
+
+.twitter-slider .swiper-pagination-bullet-active {
+  background-color: #a9afb3;
 }
 
 .footer {
