--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -22,6 +22,17 @@ body {
 	font-family: "Lato", Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 //========================================================================================================================================================
+.visually-hidden {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	margin: -1px;
+	border: 0;
+	padding: 0;
+	clip: rect(0 0 0 0);
+	overflow: hidden;
+}
+
 .ibg {
 	background-position: center;
 	background-size: cover;
@@ -360,8 +371,8 @@ body {
 	// .shop__content
 	&__content {
 		display: grid;
-		grid-template: repeat(2, 1fr) / repeat(6, 1fr);
 		grid-auto-flow: column;
+		grid-template: repeat(2, 1fr) / repeat(6, 1fr);
 	}
 	// .shop__item
 	&__item {
@@ -482,6 +493,9 @@ body {
 		font-weight: 300;
 		text-transform: uppercase;
 		cursor: pointer;
+		&:hover {
+			background-color: #178c6f;
+		}
 	}
 }
 
@@ -489,14 +503,71 @@ body {
 
 .footer {
 	grid-area: footer;
+
 	background-color: #f7f7f7;
+	padding: 50px 0px;
+	@media (min-width: 768px) {
+		padding: 100px 0px;
+	}
+	// .footer__body
+	&__body {
+		max-width: 1040px;
+		padding: 0px 20px;
+		margin: 0px auto;
+		display: grid;
+		grid-auto-flow: row;
+		justify-content: center;
+		@media (min-width: 768px) {
+			grid-auto-flow: column;
+			justify-content: space-between;
+		}
+	}
 	// .footer__contacts
 	&__contacts {
+		font-size: 14px;
+		font-style: italic;
+		line-height: 17px;
+		margin: 0px 0px 30px 0px;
+		@media (min-width: 768px) {
+			text-align: left;
+			margin: 0;
+		}
+		@media (max-width: 768px) {
+			order: 2;
+		}
+		span {
+			font-size: 16px;
+			font-weight: 700;
+		}
 	}
 	// .footer__social
 	&__social {
+		@media (max-width: 768px) {
+			order: 1;
+			margin: 0px 0px 30px 0px;
+		}
 	}
-	// .footer__sign
-	&__sign {
+	// .footer__developer
+	&__developer {
+		display: grid;
+		grid-auto-flow: column;
+		align-items: center;
+		@media (max-width: 768px) {
+			order: 3;
+		}
+		span {
+			font-size: 14px;
+			font-style: italic;
+			margin: 0px 9px 0px 0px;
+		}
+	}
+}
+.social {
+	display: grid;
+	grid-auto-flow: column;
+	justify-content: center;
+	gap: 15px;
+	// .social__item
+	&__item {
 	}
 }
