--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,17 @@ body {
   font-family: "Lato", Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
 .ibg {
   background-position: center;
   background-size: cover;
@@ -402,10 +413,10 @@ body {
 .shop__content {
   display: -ms-grid;
   display: grid;
+  grid-auto-flow: column;
   -ms-grid-rows: (1fr)[2];
   -ms-grid-columns: (1fr)[6];
       grid-template: repeat(2, 1fr)/repeat(6, 1fr);
-  grid-auto-flow: column;
 }
 
 .shop__item {
@@ -540,9 +551,110 @@ body {
   cursor: pointer;
 }
 
+.subscribe__button:hover {
+  background-color: #178c6f;
+}
+
 .footer {
   -ms-grid-row: 2;
   -ms-grid-column: 1;
   grid-area: footer;
   background-color: #f7f7f7;
+  padding: 50px 0px;
+}
+
+@media (min-width: 768px) {
+  .footer {
+    padding: 100px 0px;
+  }
+}
+
+.footer__body {
+  max-width: 1040px;
+  padding: 0px 20px;
+  margin: 0px auto;
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .footer__body {
+    grid-auto-flow: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+.footer__contacts {
+  font-size: 14px;
+  font-style: italic;
+  line-height: 17px;
+  margin: 0px 0px 30px 0px;
+}
+
+@media (min-width: 768px) {
+  .footer__contacts {
+    text-align: left;
+    margin: 0;
+  }
+}
+
+@media (max-width: 768px) {
+  .footer__contacts {
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+}
+
+.footer__contacts span {
+  font-size: 16px;
+  font-weight: 700;
+}
+
+@media (max-width: 768px) {
+  .footer__social {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+    margin: 0px 0px 30px 0px;
+  }
+}
+
+.footer__developer {
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 768px) {
+  .footer__developer {
+    -webkit-box-ordinal-group: 4;
+        -ms-flex-order: 3;
+            order: 3;
+  }
+}
+
+.footer__developer span {
+  font-size: 14px;
+  font-style: italic;
+  margin: 0px 9px 0px 0px;
+}
+
+.social {
+  display: -ms-grid;
+  display: grid;
+  grid-auto-flow: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 15px;
 }
