--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,10 @@ body {
   font-family: "Lato", Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
+body.lock {
+  overflow: hidden;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -98,58 +102,199 @@ body {
   width: 100%;
   z-index: 50;
   left: 0;
-  top: 65px;
+  top: 0;
+}
+
+@media (min-width: 768px) {
+  .header {
+    display: block;
+    top: 65px;
+  }
 }
 
 .header__logo {
-  position: relative;
-  top: -55px;
+  position: absolute;
+  top: 30px;
   left: 50%;
-  width: 94px;
-  height: 85px;
   -webkit-transform: translateX(-47px);
           transform: translateX(-47px);
+  width: 94px;
+  height: 85px;
 }
 
 .header__logo img {
   width: 100%;
 }
 
-.menu__list {
+@media (min-width: 768px) {
+  .header__logo {
+    top: -35px;
+  }
+}
+
+.menu {
+  width: 100%;
+}
+
+.menu__icon {
+  position: absolute;
+  width: 30px;
+  height: 18px;
+  top: 50px;
+  right: 20px;
+  cursor: pointer;
+  z-index: 5;
+}
+
+.menu__icon span, .menu__icon::before, .menu__icon::after {
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  left: 0;
+  background-color: #353738;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.menu__icon span {
+  top: calc(50% - 1px);
+  -webkit-transform: scale(1);
+          transform: scale(1);
+}
+
+.menu__icon::before {
+  content: "";
+  top: 0;
+}
+
+.menu__icon::after {
+  content: "";
+  bottom: 0;
+}
+
+.menu__icon.active span, .menu__icon.active::before, .menu__icon.active::after {
+  background-color: #fff;
+}
+
+.menu__icon.active span {
+  -webkit-transform: scale(0);
+          transform: scale(0);
+}
+
+.menu__icon.active::before {
+  -webkit-transform: translate(0, 8px) rotate(45deg);
+          transform: translate(0, 8px) rotate(45deg);
+}
+
+.menu__icon.active::after {
+  -webkit-transform: translate(0, -8px) rotate(-45deg);
+          transform: translate(0, -8px) rotate(-45deg);
+}
+
+@media (min-width: 768px) {
+  .menu__icon {
+    display: none;
+  }
+}
+
+.menu__body {
+  width: 100%;
+  height: 100%;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  -webkit-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
+  position: fixed;
+  overflow: auto;
+  padding: 160px 0px 0px 0px;
+  background-color: rgba(77, 73, 89, 0.8);
   display: -ms-grid;
   display: grid;
-  grid-auto-flow: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
 }
 
-.menu__list li {
-  padding: 0px 36px;
-  position: relative;
+.menu__body.active {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
 }
 
-.menu__list li:nth-child(1)::after, .menu__list li:nth-child(3)::after {
+@media (min-width: 768px) {
+  .menu__body {
+    height: auto;
+    position: relative;
+    padding: 0;
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    background-color: transparent;
+    -webkit-transition: none;
+    transition: none;
+  }
+}
+
+.menu__list li {
+  position: relative;
+  margin: 0px 0px 30px 0px;
+  padding: 0px 0px 30px 0px;
+}
+
+.menu__list li::after {
   content: "";
   position: absolute;
-  bottom: 6px;
-  right: 0;
-  width: 2px;
-  height: 2px;
-  background-color: #4d4959;
+  bottom: 0;
+  right: 50%;
+  width: 6px;
+  height: 6px;
+  margin: 0px -3px 0px 0px;
+  background-color: #fff;
 }
 
-.menu__list li:nth-child(2) {
-  padding: 0px 110px 0px 36px;
+.menu__list li:last-child::after {
+  display: none;
 }
 
-.menu__list li:nth-child(3) {
-  padding: 0px 36px 0px 110px;
+@media (min-width: 768px) {
+  .menu__list {
+    display: -ms-grid;
+    display: grid;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    grid-auto-flow: column;
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
+  .menu__list li {
+    padding: 0px 36px;
+    position: relative;
+  }
+  .menu__list li li::after {
+    margin: 0;
+  }
+  .menu__list li:nth-child(1)::after, .menu__list li:nth-child(3)::after {
+    content: "";
+    position: absolute;
+    bottom: 6px;
+    right: 0;
+    width: 2px;
+    height: 2px;
+    background-color: #4d4959;
+  }
+  .menu__list li:nth-child(2) {
+    padding: 0px 110px 0px 36px;
+  }
+  .menu__list li:nth-child(2)::after {
+    display: none;
+  }
+  .menu__list li:nth-child(3) {
+    padding: 0px 36px 0px 110px;
+  }
 }
 
 .menu__link {
-  color: #4d4959;
-  font-size: 13px;
+  color: #ffffff;
+  font-size: 30px;
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 2.6px;
@@ -157,6 +302,13 @@ body {
 
 .menu__link:hover {
   color: #69c3a1;
+}
+
+@media (min-width: 768px) {
+  .menu__link {
+    color: #4d4959;
+    font-size: 13px;
+  }
 }
 
 .page {
@@ -413,10 +565,23 @@ body {
 .shop__content {
   display: -ms-grid;
   display: grid;
-  grid-auto-flow: column;
-  -ms-grid-rows: (1fr)[2];
-  -ms-grid-columns: (1fr)[6];
-      grid-template: repeat(2, 1fr)/repeat(6, 1fr);
+  grid-auto-flow: dense;
+}
+
+@media (min-width: 768px) {
+  .shop__content {
+    -ms-grid-columns: (1fr)[3];
+        grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1080px) {
+  .shop__content {
+    grid-auto-flow: column;
+    -ms-grid-rows: (1fr)[2];
+    -ms-grid-columns: (1fr)[6];
+        grid-template: repeat(2, 1fr)/repeat(6, 1fr);
+  }
 }
 
 .shop__item {
@@ -477,8 +642,14 @@ body {
 }
 
 .shop__bottom {
-  padding: 75px 0px;
+  padding: 50px 0px;
   background-color: #282f35;
+}
+
+@media (min-width: 768px) {
+  .shop__bottom {
+    padding: 75px 0px;
+  }
 }
 
 .shop__button {
@@ -491,7 +662,7 @@ body {
   letter-spacing: 0.2em;
   color: #ffffff;
   border: 1px solid #ffffff;
-  padding: 0px 57px;
+  padding: 0px 30px;
 }
 
 .shop__button:hover {
@@ -501,8 +672,20 @@ body {
   transition: all 0.3s ease 0s;
 }
 
+@media (min-width: 768px) {
+  .shop__button {
+    padding: 0px 57px;
+  }
+}
+
 .subscribe {
-  padding: 110px 0px;
+  padding: 70px 20px;
+}
+
+@media (min-width: 768px) {
+  .subscribe {
+    padding: 110px 0px;
+  }
 }
 
 .subscribe__logo {
@@ -516,17 +699,19 @@ body {
   margin: 0px 0px 35px 0px;
 }
 
-.subscribe__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+@media (min-width: 500px) {
+  .subscribe__form {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .subscribe__input {
-  width: 400px;
+  width: 100%;
   height: 69px;
   background-color: #ffffff;
   border: 1px solid #d3d7d9;
@@ -536,10 +721,18 @@ body {
   font-weight: 400;
   font-style: italic;
   color: #929292;
-  margin: 0px 8px 0px 0px;
+  margin: 0px 0px 8px 0px;
+}
+
+@media (min-width: 500px) {
+  .subscribe__input {
+    width: 400px;
+    margin: 0px 8px 0px 0px;
+  }
 }
 
 .subscribe__button {
+  width: 100%;
   height: 69px;
   background-color: #64c29e;
   color: #fff;
@@ -549,6 +742,12 @@ body {
   font-weight: 300;
   text-transform: uppercase;
   cursor: pointer;
+}
+
+@media (min-width: 500px) {
+  .subscribe__button {
+    width: auto;
+  }
 }
 
 .subscribe__button:hover {
